# qod-mock

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  check_runtime_hash.py  demo_flow.py  docker-compose.yml  gen_keys.py  intent.json  main.py  openapi.runtime.json  pyproject.toml  requirements.txt  run.ps1  run_full_flow.ps1  tamper_db.py  tamper_db_signature_mismatch.py  telemetry.json  test_demo_flow.py  verify_proof.py
.github/: dependabot.yml
.github/workflows/: ci.yml  smoke.yml
agent/: probe.py
artifacts/: proof_1cad0367-5f78-4a14-8692-1ab50332c595_20260302_082328.json  proof_1e589da0-f0f9-4177-86cc-4fd118b3fa00_20260302_080949.json  proof_29626981-9870-466c-a0ed-c20f43c30340_20260302_082417.json  proof_ccfd2af9-15e9-43e6-af75-63388e19e622_20260302_082253.json
backend/: logging_redact.py  main.py  obs.py  qod_mock.sqlite3  requirements.txt
backend/middleware/: limits.py
backend/routers/: health.py
demo_app/: app.py
docs/: artifact.schema.json  openapi.snapshot.yaml
evidence/: VALIDATION.md
schemas/: artifact.v1.json
scripts/: clean_room.ps1  verify_signature.py
src/: validate_artifact.py
tests/: test_contract.py  test_contract_artifact_runtime.py  test_contract_docs.py  test_integration.py  test_integration_compose.py  test_integrity_tamper.py  test_key_rotation.py  test_smoke.py  test_unit.py  test_validation.py
web/: index.html
